fixed issues blue square on mobile and modal issus

--- a/client/src/assets/styles/utils/_rules.scss
+++ b/client/src/assets/styles/utils/_rules.scss
@@ -21,3 +21,11 @@ a {
 .ml {
   margin-left: 2%;
 }
+
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
